# pinchsms

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: adding-modems.md  architecture.md  configuration.md
sms_modem/: cli.py  modem.py
src/pinchsms/: __init__.py  cli.py  config.py
src/pinchsms/core/: modem.py  sms.py  usb.py
src/pinchsms/devices/: __init__.py  base.py  generic.py  sew132.py
src/pinchsms/forwarding/: __init__.py  base.py  mqtt.py  webhook.py
tests/: test_cli.py  test_config.py  test_devices.py  test_forwarding.py  test_modem.py  test_sms_parsing.py  test_usb.py
