[project]
name = "pinchsms"
version = "0.1.0"
description = "Universal AT-command USB modem SMS tool with webhook/MQTT forwarding"
requires-python = ">=3.14"
license = "MIT"
readme = "README.md"
keywords = ["sms", "modem", "at-commands", "usb", "webhook", "mqtt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Telephony",
]
dependencies = ["pyusb>=1.3.1", "pydantic>=2.11"]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.1"]

[dependency-groups]
dev = ["ruff", "ty", "pytest", "pytest-cov", "diff-cover"]

[project.scripts]
pinchsms = "pinchsms.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinchsms"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
root = ["src"]

[tool.ty.rules]
# pyusb has no type stubs; attributes are dynamically set
unresolved-attribute = "ignore"

[tool.coverage.run]
source = ["pinchsms"]
core = "sysmon"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
